[package]
name = "rjot"
version = "0.1.0"
edition = "2021"
description = "A minimalist, command-line journal that's fast, private, and git-friendly."
license = "MIT"
repository = "https://github.com/bgreenwell/jot"

[dependencies]
anyhow = "1.0"  # For cleaner error handling
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1" # Add this line
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"